fix: hide container scrollbar and remove extra height on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,11 @@
 @import "tailwind.css";
 @import "transitions.css";
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+html, body {
+  overflow: hidden;
+  height: 100%;
+}
